deployment/deploymentNOTTOUCH.yaml
# Create app deployment for auth service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: egs-yellowfy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: registry.deti/egs-yellowfy/auth:v1
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000

#Create nginx deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: egs-yellowfy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: registry.deti/egs-yellowfy/nginx:v1
          name: nginx
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always

# Create db deployment 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-db
  namespace: egs-yellowfy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-db
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers:
      - name: auth-db
        image: mysql:latest
        volumeMounts:
        - name: init-script
          mountPath: /docker-entrypoint-initdb.d
        resources:
          requests:
            memory: "512Mi"   
            cpu: "250m"       
          limits:
            memory: "1Gi"     
            cpu: "500m"       
        ports:
        - containerPort: 3306
      volumes:
      - name: init-script
        configMap:
          name: mysql-init-script

---
apiVersion: v1
kind: Service
metadata:
  name: auth-db
  namespace: egs-yellowfy
spec:
  selector:
    app: auth-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
    
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: egs-yellowfy
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: auth

# Create Service for APP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: egs-yellowfy
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-k3s
  namespace: egs-yellowfy
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: egs-yellowfy.deti
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port: 
              number: 80
